--- a/client/index.html
+++ b/client/index.html
@@ -8,12 +8,20 @@
 </head>
 <body>
     <div id="message" style="width: 100%; background-color: gray;min-height: 100px;"></div>
-    <br>
+    <hr>
+    <label for="u-box">username:</label>
+    <input type="text" id="u-box" name="u-box">
+    <label for="n-box">nickname:</label>
+    <input type="text" id="n-box" name="n-box">
+    <label for="p-box" >password:</label>
+    <input type="password" id="p-box" name="p-box">
     <button id="login-btn">Login</button>
-    <br>
+    <button id="regist-btn">Register</button>
+    <hr>
     <label for="ms-box">Boardcast Message:</label>
-    <input type="text" id="ms-box" name="ms-box"><br>
+    <input type="text" id="ms-box" name="ms-box">
     <button id="send-btn">send</button>
+    <hr>
 
     <script type="module">
         import { io } from "https://cdn.socket.io/4.3.2/socket.io.esm.min.js";
@@ -28,21 +36,36 @@
 
         socket.on("broadcast-all", (...args) => {
             let m = args[0];
-            document.getElementById("message").innerHTML += `<h3>Sender:${m.sender} Message: ${m.message}</h3>`
+            document.getElementById("message").innerHTML += `<h3>${m.sender} : ${m.message}</h3>`
         });
 
         document.getElementById("login-btn").addEventListener('click',()=>{
-            socket.emit("login",'user1','password1',(response)=>{
-                document.getElementById("message").innerHTML += `<h3>Server: Status ${response.status} Message: ${response.message}</h3>`
+            const username = document.getElementById("u-box").value;
+            const password = document.getElementById("p-box").value;
+            socket.emit('login',username,password,(response)=>{
+                print('server',response);
+            });
+        });
+
+        document.getElementById("regist-btn").addEventListener('click',()=>{
+            const username = document.getElementById("u-box").value;
+            const nickname = document.getElementById("n-box").value;
+            const password = document.getElementById("p-box").value;
+            socket.emit('register',username,password,nickname,(response)=>{
+                print('server',response);
             });
         });
 
         document.getElementById("send-btn").addEventListener('click',()=>{
             let message = document.getElementById("ms-box").value;
             socket.emit("broadcast",message,(response)=>{
-                console.log(response.status,response.message);
+                console.log(response.status);
             });
         });
+
+        function print(string,obj){
+            document.getElementById("message").innerHTML += `${string}:${JSON.stringify(obj)}</h3>`;
+        }
 
     </script>
 </body>
