fix database query

--- a/client/index.html
+++ b/client/index.html
@@ -64,7 +64,7 @@
         });
 
         function print(string,obj){
-            document.getElementById("message").innerHTML += `${string}:${JSON.stringify(obj)}</h3>`;
+            document.getElementById("message").innerHTML += `<h3>${string}:${JSON.stringify(obj)}</h3>`;
         }
 
     </script>
