--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,7 @@
                 message_box.textContent = data[idx].message
                 message_zone.appendChild(sender_box)
                 message_zone.appendChild(message_box)
+                message_zone.classList.add("chat-zone")
                 chat_zone.appendChild(message_zone)
             }
         }
