--- a/client/index.html
+++ b/client/index.html
@@ -78,6 +78,7 @@
                 var chat_name = document.createElement("span");
                 chat_name.textContent = data[idx].name ;
                 groupchat_box.appendChild(chat_name);
+                groupchat_box.classList.add("lobby-zone");
                 lobby_zone.appendChild(groupchat_box);
             }
         }
@@ -89,7 +90,15 @@
         }, {
             name: "group3"
         }, {
-            name: "group555"
+            name: "group4"
+        }, {
+            name: "group5"
+        }, {
+            name: "group6"
+        }, {
+            name: "group7"
+        }, {
+            name: "group8"
         }])
 
         var my_id = "test1"
