--- a/client/index.html
+++ b/client/index.html
@@ -4,28 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <title>Client</title>
 </head>
 <body>
-    <div>
-        <div id="lobby"></div> 
-        <div id="message" style="width: 100%; background-color: gray;min-height: 100px;"></div>
+    <div id="account">
+        <hr>
+        <label for="u-box">username:</label>
+        <input type="text" id="u-box" name="u-box">
+        <label for="n-box">nickname:</label>
+        <input type="text" id="n-box" name="n-box">
+        <label for="p-box" >password:</label>
+        <input type="password" id="p-box" name="p-box">
+        <button id="login-btn">Login</button>
+        <button id="regist-btn">Register</button>
+        <hr>
     </div>
-    <hr>
-    <label for="u-box">username:</label>
-    <input type="text" id="u-box" name="u-box">
-    <label for="n-box">nickname:</label>
-    <input type="text" id="n-box" name="n-box">
-    <label for="p-box" >password:</label>
-    <input type="password" id="p-box" name="p-box">
-    <button id="login-btn">Login</button>
-    <button id="regist-btn">Register</button>
-    <hr>
-    <label for="ms-box">Boardcast Message:</label>
-    <input type="text" id="ms-box" name="ms-box">
-    <button id="send-btn">send</button>
-    <hr>
+    <div id="chat-panel">
+        <div id="lobby"></div>
+        <div id="message">
+            <div id="display-message"></div>
+            <div id="input-message">
+                <input type="text" id="ms-box" name="ms-box">
+                <button id="send-btn">send</button>
+                <hr>
+            </div>
+        </div>
+    </div>
+    
 
     <script type="module">
         import { io } from "https://cdn.socket.io/4.3.2/socket.io.esm.min.js";
@@ -93,7 +102,7 @@
         }])
 
         var my_id = "test1"
-        var chat_zone = document.getElementById("message")
+        var chat_zone = document.getElementById("display-message")
         function renderChat(data) {
             for (var idx in data) {
                 var message_zone = document.createElement("div")
@@ -104,11 +113,20 @@
                 message_zone.appendChild(sender_box)
                 message_zone.appendChild(message_box)
                 message_zone.classList.add("chat-zone")
+                if (data[idx].sender == my_id) {
+                    message_zone.classList.add("me")
+                }
                 chat_zone.appendChild(message_zone)
             }
         }
 
         renderChat([{
+            message: "This is test message 1. This is test message 1.",
+            sender: "test1"
+        }, {
+            message: "This is test message 2. This is test message 2.",
+            sender: "test2"
+        }, {
             message: "This is test message 1. This is test message 1.",
             sender: "test1"
         }, {
