--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,7 @@
     <title>Client</title>
 </head>
 <body>
-    <div id="account">
-        <hr>
+    <div id="account" class="w3-padding w3-border">
         <label for="u-box">username:</label>
         <input type="text" id="u-box" name="u-box">
         <label for="n-box">nickname:</label>
@@ -22,12 +21,11 @@
         <input type="password" id="p-box" name="p-box">
         <button id="login-btn">Login</button>
         <button id="regist-btn">Register</button>
-        <hr>
     </div>
-    <div id="chat-panel">
+    <div id="chat-panel" class="w3-border">
         <div id="lobby"></div>
-        <div id="message">
-            <div id="display-message"></div>
+        <div id="message" class="w3-border">
+            <div id="display-message" class="w3-padding"></div>
             <div id="input-message">
                 <input type="text" id="ms-box" name="ms-box">
                 <button id="send-btn">send</button>
@@ -120,11 +118,12 @@
                 var message_box = document.createElement("div")
                 sender_box.textContent = data[idx].sender
                 message_box.textContent = data[idx].message
+                message_box.classList.add("w3-card", "w3-blue", "w3-padding", "w3-round-large")
                 message_zone.appendChild(sender_box)
                 message_zone.appendChild(message_box)
                 message_zone.classList.add("chat-zone")
                 if (data[idx].sender == my_id) {
-                    message_zone.classList.add("me")
+                    message_box.classList.add("w3-light-grey")
                 }
                 chat_zone.appendChild(message_zone)
             }
