--- a/client/index.html
+++ b/client/index.html
@@ -19,19 +19,24 @@
         <input type="text" id="n-box" name="n-box">
         <label for="p-box" >password:</label>
         <input type="password" id="p-box" name="p-box">
-        <button id="login-btn">Login</button>
-        <button id="regist-btn">Register</button>
+        <button id="login-btn" class="w3-small-button w3-teal w3-round-xxlarge">Login</button>
+        <button id="regist-btn" class="w3-small-button w3-teal w3-round-xxlarge">Register</button>
+        <button id="change-name-btn" class="w3-small-button w3-teal w3-round-xxlarge">Change nickname</button>
     </div>
     <div id="chat-panel">
         <div id="lobby"></div>
         <div id="message">
             <div id="display-message"></div>
-            <div id="input-message">
-                <label for="colorPicker">Choose a color: <code id="colorCode"></code> </label>
-                <input type="color" value="#e0ffee" id="colorPicker">
-                
-                <input type="text" id="ms-box" name="ms-box">
-                <button id="send-btn">send</button>
+            <div id="message-bottom">
+                <div id="color-picker">
+                    <label for="colorPicker">Choose a color: <code id="colorCode"></code> </label>
+                    <input type="color" value="#e0ffee" id="colorPicker">
+                    <button id="color-btn" class="w3-small-button w3-teal w3-round-xxlarge">change color</button>
+                </div>    
+                <div id="message-input">
+                    <input type="text" id="ms-box" name="ms-box">
+                    <button id="send-btn">send</button>
+                </div>
             </div>
         </div>
     </div>
@@ -83,22 +88,32 @@
 
         // lobby zone
         var lobby_zone = document.getElementById("lobby")
-        function renderGroupChat(data){
-            for(var idx in data) {
+        function renderLobby(groupData, userData){
+            for(var idx in groupData) {
                 var groupchat_box = document.createElement("button");
                 var chat_name = document.createElement("span");
-                chat_name.textContent = data[idx].name ;
+                chat_name.textContent = groupData[idx].name ;
                 groupchat_box.appendChild(chat_name);
                 groupchat_box.classList.add("w3-button", "w3-teal");
                 lobby_zone.appendChild(groupchat_box);
-            }
+            };
+
             var create_group_button = document.createElement("button");
             create_group_button.classList.add("w3-button", "w3-black");
             create_group_button.textContent = "+";
             lobby_zone.appendChild(create_group_button);
+
+            for(var idx in userData) {
+                var user_box = document.createElement("button");
+                var user_name = document.createElement("span");
+                user_name.textContent = userData[idx].username ;
+                user_box.appendChild(user_name);
+                user_box.classList.add("w3-button", "w3-grey");
+                lobby_zone.appendChild(user_box);
+            };
         }
 
-        renderGroupChat([{
+        renderLobby([{
             name: "group1"
         }, {
             name: "group2"
@@ -108,13 +123,13 @@
             name: "group4"
         }, {
             name: "group5"
+        }], [{
+            username: "user1"
         }, {
-            name: "group6"
+            username: "user2"
         }, {
-            name: "group7"
-        }, {
-            name: "group8"
-        }])
+            username: "user3"
+        }]);
 
         // chat zone
         var my_id = "test1"
