put more responsive

--- a/client/index.html
+++ b/client/index.html
@@ -176,6 +176,7 @@
         document.getElementById("color-btn").addEventListener('click',()=>{
             document.getElementById("display-message").style.backgroundColor = colorPicker.value;
             document.getElementById("message").style.backgroundColor = colorPicker.value;
+            document.getElementById("message-bottom").style.backgroundColor = colorPicker.value;
         });
 
         getColor();
