change send button color

--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,7 @@
                 </div>    
                 <div id="message-input">
                     <input type="text" id="ms-box" name="ms-box">
-                    <button id="send-btn">send</button>
+                    <button id="send-btn" class="w3-small-button w3-teal w3-round-xxlarge">send</button>
                 </div>
             </div>
         </div>
